src/test/deca/codegen/valid/created/class/return_double.deca
// Description :
//		double return dans une methode
//
// Resultats :
//		Ok

class A{
 	int getc(){
 	return 0;
 	return 1;
 	}
}


{
A a = new A();
println("0 = ", a.getc());

}